# disc3d-ucds-etl

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  BATCH_EXPORTS_REGEX.md  CAMERA_CONVENTIONS.md  COLMAP_TRIANGULATION_DOCKER.md  EXPORTERS.md  UCDS_SPEC.md
examples/: dataset_manifest.example.yaml
schema/: dataset.schema.json
scripts/: 01_build_ucds.sh  02_export_colmap.sh  03_export_nerfstudio.sh  04_prepare_exports_regex.sh  batch_triangulate_colmap_docker.sh  sync_colmap_image_ids.py  triangulate_colmap_docker.sh
src/: imports_added_here.txt
src/disc3d_ucds/: batch_prepare.py  build.py  cli.py  discovery.py  geometry.py  validate.py
src/disc3d_ucds/exporters/: colmap.py  nerfstudio.py
src/disc3d_ucds/parsers/: campos.py  metashape_xml.py
tests/: test_discovery_regex.py  test_geometry.py
